2007-03-13  Bernhard R. Link <brlink@debian.org>
	* add variables support