@@ -1,2 +1,4 @@
+2007-03-14  Bernhard R. Link <brlink@debian.org>
+	* add --checkstdout option to change the stdout default
 2007-03-13  Bernhard R. Link <brlink@debian.org>
 	* add variables support
